--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencyManagement {
         dependency 'com.google.flogger:flogger-slf4j-backend:0.7.2'
         dependency 'com.google.flogger:flogger:0.7.2'
 
+        dependency 'org.valid4j:valid4j:0.5.0'
+
     }
 
 }
@@ -58,11 +60,14 @@ dependencies {
     implementation 'com.google.flogger:flogger-slf4j-backend'
     testImplementation 'org.apache.logging.log4j:log4j-api'
 
+    implementation 'org.valid4j:valid4j:0.5.0'
+
     runtimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl'
     testRuntimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
 }
 
 test {
