--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencyManagement {
 
         dependency 'org.dizitart:nitrite:3.4.4'
 
+        // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
+        dependency 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.2'
+
+
         dependency group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
         dependency 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
         dependency 'org.apache.logging.log4j:log4j-api:2.14.1'
@@ -50,6 +54,8 @@ dependencies {
     implementation 'com.google.code.gson:gson'
 
     implementation 'org.dizitart:nitrite'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
 
     compileOnly 'org.projectlombok:lombok'
     testCompileOnly 'org.projectlombok:lombok'
