Rework history tracking to allow for incremental tracking

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -16,3 +16,6 @@ loggers=storyteller
 
 logger.storyteller.name = com.github.filipmalczak.storyteller
 logger.storyteller.level = debug
+
+logger.storage_file_read.name = com.github.filipmalczak.storyteller.impl.storage.files.SimpleReadFiles
+logger.storage_file_read.level = all
