--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     jvmArgs += "--enable-preview"
+    systemProperty("flogger.backend_factory", "com.google.common.flogger.backend.slf4j.Slf4jBackendFactory#getInstance")
 }
 
 tasks.withType(JavaExec) {
