--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -3,8 +3,9 @@ appenders=common
 appender.common.type = Console
 appender.common.name = commonAppender
 appender.common.layout.type = PatternLayout
-appender.common.layout.pattern = [%d{yy-MM-dd HH:mm:ss:SSS}] [%p] [%c{1.}::%M] - %m%n
-#appender.common.layout.pattern = [%d{yy-MMM-dd HH:mm:ss:SSS}] [%p] [%c{1.}] - %m%n
+#todo %x is the context; if you use it, add it to the lyout
+#%L (line) and %M (method) make no sense, because we wrap slf4j with flogger
+appender.common.layout.pattern = [%d{yy-MM-dd HH:mm:ss:SSS}] [%5p] [%45c{1.}] - %m %n
 
 rootLogger.level = info
 
@@ -12,10 +13,10 @@ rootLogger.appenderRefs = cmn
 
 rootLogger.appenderRef.cmn.ref = commonAppender
 
-loggers=storyteller
+loggers=storyteller,storage_file_read
 
 logger.storyteller.name = com.github.filipmalczak.storyteller
 logger.storyteller.level = debug
 
 logger.storage_file_read.name = com.github.filipmalczak.storyteller.impl.storage.files.SimpleReadFiles
-logger.storage_file_read.level = all
+#logger.storage_file_read.level = trace
