Reimplement file storage to support deletion (needs testing)

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -13,13 +13,13 @@ rootLogger.appenderRefs = cmn
 
 rootLogger.appenderRef.cmn.ref = commonAppender
 
-loggers=storyteller,storage_file_read,merger
+loggers=storyteller,modificationIndex,merger
 
 logger.storyteller.name = com.github.filipmalczak.storyteller
 logger.storyteller.level = debug
 
-logger.storage_file_read.name = com.github.filipmalczak.storyteller.impl.storage.files.SimpleReadFiles
-#logger.storage_file_read.level = trace
+logger.modificationIndex.name =com.github.filipmalczak.storyteller.impl.storage.files.indexing.ModificationIndex
+logger.modificationIndex.level = trace
 
 logger.merger.name =com.github.filipmalczak.storyteller.impl.storage.NitriteMerger
 #logger.merger.level = trace
