Implement and test object deletion

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -19,7 +19,7 @@ logger.storyteller.name = com.github.filipmalczak.storyteller
 logger.storyteller.level = debug
 
 logger.modificationIndex.name =com.github.filipmalczak.storyteller.impl.storage.files.indexing.ModificationIndex
-logger.modificationIndex.level = trace
+#logger.modificationIndex.level = trace
 
 logger.merger.name =com.github.filipmalczak.storyteller.impl.storage.NitriteMerger
 #logger.merger.level = trace
