--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -3,7 +3,7 @@ appenders=common
 appender.common.type = Console
 appender.common.name = commonAppender
 appender.common.layout.type = PatternLayout
-#todo %x is the context; if you use it, add it to the lyout
+#%x is the context; if you use it, add it to the lyout
 #%L (line) and %M (method) make no sense, because we wrap slf4j with flogger
 appender.common.layout.pattern = [%d{yy-MM-dd HH:mm:ss:SSS}] [%5p] [%45c{1.}] - %m %n
 
