Enhanced conditions, expectation trackability and journal tests

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -13,7 +13,7 @@ rootLogger.appenderRefs = cmn
 
 rootLogger.appenderRef.cmn.ref = commonAppender
 
-loggers=storyteller,modificationIndex,merger
+loggers=storyteller,modificationIndex,merger,expectations
 
 logger.storyteller.name = com.github.filipmalczak.storyteller
 logger.storyteller.level = debug
@@ -23,3 +23,6 @@ logger.modificationIndex.name =com.github.filipmalczak.storyteller.impl.storage.
 
 logger.merger.name =com.github.filipmalczak.storyteller.impl.storage.NitriteMerger
 #logger.merger.level = trace
+
+logger.expectations.name =com.github.filipmalczak.storyteller.utils.expectations
+#logger.expectations.level = trace
