--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'jacoco'
+    id 'maven-publish'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
