Add sources and javadoc publications

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,11 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
